<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:iconTint="@color/darkbrown"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_booklist"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_booklist" />
        <item
            android:id="@+id/nav_message"
            app:backgroundTint="@color/darkbrown"
            android:backgroundTint="@color/darkbrown"
            android:icon="@drawable/message"
            android:title="Message" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>