<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rentaland.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.rentaland.ui.gallery.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_booklist"
        android:name="com.example.rentaland.ui.slideshow.BooklistFragment"
        android:label="@string/menu_booklist"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.rentaland.ui.message.MessageThreadFragment"
        android:label="fragment_message" />


</navigation>